Update Ploteando Variables Categoricas
Eliminado texto que no servía.

--- a/Mini Ejercicios/Ploteando Variables Categoricas/Ploteando Variables Categoricas.ipynb
+++ b/Mini Ejercicios/Ploteando Variables Categoricas/Ploteando Variables Categoricas.ipynb
@@ -34,9 +34,9 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import warnings #Para eliminar l os warnings\n",
+    "import warnings #Para eliminar los warnings\n",
     "\n",
-    "# load in the data\n",
+    "# Cargando dataset\n",
     "df = pd.read_csv(\"mushroom_data.csv\")\n",
     "print(df.head())"
    ]
@@ -371,11 +371,7 @@
    "id": "fa0af899",
    "metadata": {},
    "source": [
-    "Great job! In relatively few lines of code, you have created 23 informative plots. Now that they are titled, labeled clearly, and ordered, you can really dive in on your analysis.\n",
-    "\n",
-    "   Think about how someone could best use these visualizations. It is easy to tell which features of mushrooms are most common and rare, and we get insights into the variety of mushrooms in the fungi kingdom.\n",
-    "   \n",
-    "   Spend some time looking over the graphs. Write down exciting insights you find. Here are some examples to get you started:\n",
+    "  \n",
     "   - La cantidad de hongos que  se  pueden comer vs los que son venesos es casi equitativa!!\n",
     "   - La mayoría de los hongos de este dataset tienen una superficie escamosa.\n",
     "   - Hay una cantidad insignificante de hongos que tienen olor a alemndra.\n",
